include_directories(../src)

add_subdirectory(bode)
add_subdirectory(cpuplot)
add_subdirectory(curvdemo1)
add_subdirectory(curvdemo2)
add_subdirectory(dials)
add_subdirectory(event_filter)
add_subdirectory(friedberg)
add_subdirectory(navigation)
add_subdirectory(oscilloscope)
add_subdirectory(plotmatrix)
add_subdirectory(radio)
add_subdirectory(rasterview)
add_subdirectory(realtime)
add_subdirectory(refreshtest)
add_subdirectory(simpleplot)
add_subdirectory(sinusplot)
add_subdirectory(sliders)
add_subdirectory(spectrogram)
add_subdirectory(svgmap)
add_subdirectory(sysinfo)
add_subdirectory(tvplot)
